# jira-like

./: .coveragerc  .gitignore  Jira LIKE.postman_collection.json  README.md  docker-compose.yml  makefile  manage.py  pyproject.toml  requirements.txt
clients/: models.py  serializer.py  views.py
clients/migrations/: 0001_initial.py
jira_like/: asgi.py  constants.py  settings.py  urls.py  wsgi.py
projects/: models.py  serializer.py  views.py
projects/migrations/: 0001_initial.py
tasks/: models.py  serializer.py  views.py
tasks/migrations/: 0001_initial.py
tests/: test_clients.py  test_projects.py  test_tasks.py
