[tool.poetry]
name = "jira-like"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
djangorestframework = "^3.15.2"
pylint-django = "^2.5.5"
coverage = "^7.5.4"
psycopg2-binary = "^2.9.9"
drf-yasg = "^1.21.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
